fixed: horizontal scroll

--- a/src/Components/CV/CV.module.scss
+++ b/src/Components/CV/CV.module.scss
@@ -1,17 +1,19 @@
 .main{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     position: sticky;
     top:0;
     z-index: 3;
-    background: white;
+    background:gray;
     margin: 100px 0 0;
 }
 .list{
-    width: 100vw;
+    width: 100%;
     height: 60vh;
 }
 .map{
-    width: 100vw;
+    width: 90%;
     height:40vh ;
+    margin:auto;
+    padding: 0;
 }
