--- a/src/Components/Portfolio/Portfolio.module.scss
+++ b/src/Components/Portfolio/Portfolio.module.scss
@@ -1,5 +1,5 @@
 .main{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     position: sticky;
     top:0;
